--- a/src/components/layout/Navbar/index.css
+++ b/src/components/layout/Navbar/index.css
@@ -2,7 +2,8 @@
   .grid-areas-navbar {
     display: grid;
     grid-template-areas:
-      "logo search-tabs profile"; /* For md, lg, xl */
+      "logo search-tabs profile"
+      "search search search"; /* For md, lg, xl */
   }
 
   .logo {
@@ -11,34 +12,29 @@
 
   .search-tabs {
     grid-area: search-tabs;
+    justify-self: center;
   }
 
   .profile {
     grid-area: profile;
+    justify-self: flex-end;
+  }
+  .search {
+    grid-area: search;
+    justify-self: center;
   }
 
-  @media (max-width: 936px) {
-    .grid-areas-navbar {
-      grid-template-areas:
-        "logo profile"
-        "search-tabs search-tabs"; 
-    }
-
-    .search-tabs {
-      justify-self: center;
-    }
-  }
 
   @media (max-width: 744px) {
     .grid-areas-navbar {
-      grid-template-areas:
-        "logo"
-        "profile"
-        "search-tabs"; 
-    }
+    grid-template-areas:
+      "search search search";
+  }
 
-    .search-tabs {
-      justify-self: center;
-    }
+  .search-tabs {
+    justify-self: center;
+  }
+
+ 
   }
 }
