--- a/src/components/layout/Navbar/index.css
+++ b/src/components/layout/Navbar/index.css
@@ -1,40 +1,41 @@
 @layer utilities {
   .grid-areas-navbar {
     display: grid;
-    grid-template-areas:
-      "logo search-tabs profile"
-      "search search search"; /* For md, lg, xl */
+    grid-template-columns: 1fr auto 1fr; 
+    grid-template-rows: 100%;
+    grid-column-gap: 20px;
+    align-items: center;
   }
 
   .logo {
-    grid-area: logo;
+    justify-self: start;
   }
 
   .search-tabs {
-    grid-area: search-tabs;
     justify-self: center;
   }
 
   .profile {
-    grid-area: profile;
-    justify-self: flex-end;
-  }
-  .search {
-    grid-area: search;
-    justify-self: center;
+    justify-self: end;
   }
 
+  .search {
+    grid-column: 1 / -1;
+    justify-self: center;
+  }
 
   @media (max-width: 744px) {
     .grid-areas-navbar {
-    grid-template-areas:
-      "search search search";
-  }
+      grid-template-columns: 1fr;
+      grid-template-rows: auto auto auto auto; 
+    }
 
-  .search-tabs {
-    justify-self: center;
-  }
+    .search-tabs {
+      grid-column: 1 / -1; 
+    }
 
- 
+    .logo, .profile {
+      grid-column: 1 / -1; 
+    }
   }
 }
